[gd_scene load_steps=18 format=3 uid="uid://cc1fomjf362h5"]

[ext_resource type="Script" path="res://addons/flowerwall_postprocess/flowerwall_pp_script.gd" id="1_86jhl"]
[ext_resource type="Shader" path="res://addons/flowerwall_postprocess/shaders/dithering.gdshader" id="2_njgwi"]
[ext_resource type="Shader" path="res://addons/flowerwall_postprocess/shaders/blurX.gdshader" id="2_t16tb"]
[ext_resource type="Shader" path="res://addons/flowerwall_postprocess/shaders/blurY.gdshader" id="3_6nin8"]
[ext_resource type="Shader" path="res://addons/flowerwall_postprocess/shaders/crt.gdshader" id="4_kpd3d"]
[ext_resource type="Shader" path="res://addons/flowerwall_postprocess/shaders/bloom.gdshader" id="5_xks6t"]
[ext_resource type="Texture2D" uid="uid://y8vvcnbk24yw" path="res://Scenes/153961.jpg" id="7_w6ev1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vcmfx"]
shader = ExtResource("2_njgwi")
shader_parameter/color_depth = 8
shader_parameter/dithering = true
shader_parameter/resolution_scale = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fjm1h"]
shader = ExtResource("2_t16tb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ax85r"]
shader = ExtResource("3_6nin8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pli6x"]
shader = ExtResource("4_kpd3d")
shader_parameter/noise_strength = 0.3
shader_parameter/curve_power = 1.02
shader_parameter/vignette_size = 6.0
shader_parameter/vignette_attenuation = 2.0
shader_parameter/scanlines_interval = 6.0
shader_parameter/scanline_opacity = 0.4
shader_parameter/scanline_thickness = 3.0
shader_parameter/brightness_multiplier = 1.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pilqa"]
shader = ExtResource("5_xks6t")
shader_parameter/BLOOM_THRESHOLD = 0.125
shader_parameter/BLOOM_INTENSITY = 1.9
shader_parameter/bloom_blur_iterations = 5
shader_parameter/bloom_blur_size = 0.0024
shader_parameter/bloom_blur_subdivisions = 8

[sub_resource type="LabelSettings" id="LabelSettings_d0138"]
font_size = 59
font_color = Color(1, 0.247059, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_weugb"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1tp7g"]
bg_color = Color(0.65098, 0.65098, 0.65098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkljj"]
bg_color = Color(0.466667, 0.466667, 0.466667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mv3tv"]
bg_color = Color(0.533333, 0.494118, 0.498039, 1)

[node name="flowerwall_pp" type="Control" node_paths=PackedStringArray("dither", "preblur_x", "preblur_y", "crt", "bloom")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_86jhl")
dither = NodePath("dithering")
preblur_x = NodePath("preblur_x")
preblur_y = NodePath("preblur_y")
crt = NodePath("CRT")
bloom = NodePath("post_bloom")

[node name="dithering" type="CanvasLayer" parent="."]
layer = 99

[node name="dither" type="ColorRect" parent="dithering"]
material = SubResource("ShaderMaterial_vcmfx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="preblur_x" type="CanvasLayer" parent="."]
layer = 100

[node name="x_blur" type="ColorRect" parent="preblur_x"]
material = SubResource("ShaderMaterial_fjm1h")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="preblur_y" type="CanvasLayer" parent="."]
layer = 100

[node name="y_blur" type="ColorRect" parent="preblur_y"]
material = SubResource("ShaderMaterial_ax85r")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="CRT" type="CanvasLayer" parent="."]
layer = 101

[node name="crt_shader" type="ColorRect" parent="CRT"]
material = SubResource("ShaderMaterial_pli6x")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="post_bloom" type="CanvasLayer" parent="."]
layer = 102

[node name="bloom" type="ColorRect" parent="post_bloom"]
material = SubResource("ShaderMaterial_pilqa")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1544.0
offset_top = 390.0
offset_right = 1902.0
offset_bottom = 1000.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CRT"
label_settings = SubResource("LabelSettings_d0138")

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Preblur"
label_settings = SubResource("LabelSettings_d0138")

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Dithering"
label_settings = SubResource("LabelSettings_d0138")

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Downscaling"
label_settings = SubResource("LabelSettings_d0138")

[node name="Label6" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Noise"
label_settings = SubResource("LabelSettings_d0138")

[node name="Label5" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Scanlines"
label_settings = SubResource("LabelSettings_d0138")

[node name="Label7" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Curve
"
label_settings = SubResource("LabelSettings_d0138")

[node name="crt_toggle" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.734375
anchor_top = 0.373611
anchor_right = 0.777605
anchor_bottom = 0.446759
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/icon_normal_color = Color(0.219608, 0.219608, 0.219608, 1)
theme_override_colors/icon_pressed_color = Color(0.678431, 0.678431, 0.678431, 1)
theme_override_colors/icon_hover_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.870588, 0.870588, 0.870588, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_weugb")
theme_override_styles/hover = SubResource("StyleBoxFlat_1tp7g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gkljj")
theme_override_styles/focus = SubResource("StyleBoxFlat_mv3tv")
toggle_mode = true
button_pressed = true
icon = ExtResource("7_w6ev1")
metadata/_edit_use_anchors_ = true

[node name="preblur_toggle" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.734375
anchor_top = 0.452315
anchor_right = 0.777605
anchor_bottom = 0.525463
offset_top = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/icon_normal_color = Color(0.219608, 0.219608, 0.219608, 1)
theme_override_colors/icon_pressed_color = Color(0.678431, 0.678431, 0.678431, 1)
theme_override_colors/icon_hover_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.870588, 0.870588, 0.870588, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_weugb")
theme_override_styles/hover = SubResource("StyleBoxFlat_1tp7g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gkljj")
theme_override_styles/focus = SubResource("StyleBoxFlat_mv3tv")
toggle_mode = true
button_pressed = true
icon = ExtResource("7_w6ev1")
metadata/_edit_use_anchors_ = true

[node name="dithering_toggle" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.734375
anchor_top = 0.531944
anchor_right = 0.777605
anchor_bottom = 0.605093
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/icon_normal_color = Color(0.219608, 0.219608, 0.219608, 1)
theme_override_colors/icon_pressed_color = Color(0.678431, 0.678431, 0.678431, 1)
theme_override_colors/icon_hover_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.870588, 0.870588, 0.870588, 1)
theme_override_colors/icon_focus_color = Color(1, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_weugb")
theme_override_styles/hover = SubResource("StyleBoxFlat_1tp7g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gkljj")
theme_override_styles/focus = SubResource("StyleBoxFlat_mv3tv")
toggle_mode = true
icon = ExtResource("7_w6ev1")
metadata/_edit_use_anchors_ = true

[node name="downscale_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 944.0
offset_top = 665.0
offset_right = 1501.0
offset_bottom = 736.0
min_value = 0.02
max_value = 1.0
step = 0.05
value = 1.0

[node name="noise_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 944.0
offset_top = 743.0
offset_right = 1501.0
offset_bottom = 814.0
max_value = 1.0
step = 0.1
value = 0.3

[node name="scanlines_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 946.0
offset_top = 822.0
offset_right = 1503.0
offset_bottom = 895.0
max_value = 1.0
step = 0.1
value = 0.3

[node name="curvature_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 946.0
offset_top = 910.0
offset_right = 1503.0
offset_bottom = 983.0
min_value = 1.0
max_value = 1.05
step = 0.005
value = 1.02
